1. Added parameter to the route of about page 2. Modified to read parameters from the side panel in code editor 3. Minor CSS changes. Removed compare backtest from sidebar. Changes CSS of dropdown

--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -146,9 +146,9 @@
           <iron-icon item-icon icon="vaadin-icons:edit"></iron-icon>
         </paper-icon-item>
           
-        <paper-icon-item menu-panel = 'editor'action-panel='comparebacktests' on-tap="onAction">Compare Backtests
+        <!--paper-icon-item menu-panel = 'editor'action-panel='comparebacktests' on-tap="onAction">Compare Backtests
           <iron-icon item-icon icon="vaadin-icons:edit"></iron-icon> 
-        </paper-icon-item>
+        </paper-icon-item-->
 
         <paper-icon-item menu-panel = 'community' action-panel='createpost' on-tap="onAction">Write a Post
           <iron-icon item-icon icon="aq-icons:comment"></iron-icon>
