--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -29,6 +29,8 @@
 		  margin-top:1px;
 		  max-width: 520px;
 		  min-width: 400px;
+		  margin-left: -5px;
+		  padding-right: 10px;
 		}
 
 		#searchbox:focus{
@@ -74,7 +76,7 @@
 
 		#category_dd {
 			---button-width:170px;
-			--dropdown-width:250px;
+			--dropdown-width:240px;
 			--dropdown-border: 1px solid #e5e5e5;
 			--dropdown-height:46px;
 			--dropdown-font-size:15px;
