--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -118,7 +118,7 @@
 	        	<template is='dom-if' if="{{isProgrammer}}">
 	        		<template is='dom-if' if='[[narrow]]'>
 		            <div class="flex"></div>
-		            <paper-icon-button noink class="toolbarIcon" icon="aq-icons:split-h" title="Toggle-Left" on-tap="toggleDrawer"></paper-icon-button>
+		            <paper-icon-button noink class="toolbarIcon" icon="vaadin-icons:split-h" title="Toggle-Left" on-tap="toggleDrawer"></paper-icon-button>
 		            </template>
 		           
 		        </template>
